# clinical-standards

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  VERSIONING.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  gitleaks.yml  infra-policy.yml  pages.yml  pr-governance.yml  provenance.yml  release-mcp.yml  release.yml  repro.yml  sbom.yml  scorecard.yml  self-test.yml  sign-registry.yml  slsa-schemas.yml
actions/audit-pack/: action.yml
actions/compose-healthcheck/: action.yml
actions/python-cache/: action.yml
actions/setup-opa/: action.yml  install.sh
docs/: ARCHITECTURE.md  REFERENCE.md  START_HERE.md  VERIFY.md  analisis_ejecutivo.md  index.md
examples/multiagent-clinic/: README.md  agents.py  orchestrator.py  orchestrator_demo.py  run.sh
examples/python-service/: README.md  pyproject.toml
examples/python-service/src/example_service/: app.py
examples/python-service/tests/: test_intentional_fail.py  test_ok.py
mcp/fixtures/: events.fail_pii.jsonl  events.pass.jsonl  run.pass.json
mcp/python/: README.md  pyproject.toml
mcp/python/clinical_mcp/: __init__.py  bus.py  config.py  eventlog.py  guardrails.py  opa_eval_events.py  orchestrator.py  outbox.py  pii.py  runbook.py  runner.py  tracing.py  validate_artifacts.py
mcp/python/tests/: test_schemas_and_opa.py
mcp/schemas/: event.schema.json  registry.json  run.schema.json
policies/clinical/: events.rego  events_test.rego  registry.json
policies/conftest/: README.md  docker-compose.rego  kubernetes.rego
scripts/: generate_schema_registry.py
semgrep/rules/: clinical-security.yml  (+1 more)
templates/python/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  SECURITY.md  dependabot.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  runbook.md
templates/python/docs/: runbook.md
templates/python/src/app/: main.py
(+12 files in other folders)
